--- a/UserDetails/src/aura/UserDetailsComponent/UserDetailsComponent.cmp
+++ b/UserDetails/src/aura/UserDetailsComponent/UserDetailsComponent.cmp
@@ -1,3 +1,43 @@
-<aura:component>
-	
+<aura:component controller="ownerProfileDetail"
+                implements="force:hasSObjectName,force:appHostable,flexipage:availableForAllPageTypes,flexipage:availableForRecordHome,force:hasRecordId,forceCommunity:availableForAllPageTypes,force:lightningQuickAction"
+                access="global" >
+    <aura:attribute name="record" type="Object"/>
+    <aura:attribute name="recordLoadError" type="String"/>
+    <aura:attribute name="oUser" type="user" default="{'sobjectType' : 'User'}" />
+    <lightning:card >
+        <force:recordData aura:id="recordLoader"
+                          recordId="{!v.recordId}"
+                          fields="Name,OwnerId"
+                          targetFields="{!v.record}"
+                          targetError="{!v.recordLoadError}"
+                          recordUpdated="{!c.doInit}" />
+        <lightning:card>
+            <aura:set attribute="title">
+                <div class="slds-card__header slds-grid">
+                    <header class="slds-media slds-media_center slds-has-flexi-truncate">
+                        <div class="slds-media__figure">
+                            <lightning:avatar src="{!v.oUser.SmallPhotoUrl}" initials="BW" fallbackIconName="standard:person_account" alternativeText="{!v.oUser.Name}"/>
+                        </div>
+                        <div class="slds-media__body">
+                            <h2 class="slds-card__header-title">
+                                <a href="javascript:void(0);" class="slds-card__header-link slds-truncate" title="{!v.oUser.Name}">
+                                    <span>{!v.oUser.Name}</span>
+                                </a>
+                            </h2>
+                        </div>
+                    </header>
+                </div>
+                </aura:set>
+                <div class="c-container">
+                    <lightning:layout horizontalAlign="space">
+                        <lightning:layoutItem padding="around-small">
+                            <div class="custom-box">1</div>
+                        </lightning:layoutItem>
+                        <lightning:layoutItem padding="around-small">
+                            <div class="custom-box">2</div>
+                        </lightning:layoutItem>
+                    </lightning:layout>
+                </div>
+            </lightning:card>
+    </lightning:card>
 </aura:component>
